refactor: 점포 지도상 간략 조회 로직 최적화 - 최근 리뷰 사진 조회 과정에서 발생하던 N+1문제 해결 - 가장 최신의 리뷰 사진 5장을 응답하도록 구현 - StoreReviewPic Service & Repository 구현 - 간략 정보 응답 위한 별도 DTO 추가